# sphere-distributed-system

./: .gitignore  README.md  build.sh  fetch_metrics.cpp  fetch_pod_metrics  fetch_pod_metrics.cpp  initial_setup.sh  minikube-setup.sh  pod_metrics.txt  port_forward.sh
data-collection/: CMakeLists.txt  build.sh  fetch_pod_metrics  fetch_pod_metrics.cpp  prometheus-values.yaml  setup_metrics.sh
data-generation/: README.md  metrics.sh  sim-locust.py
data-handling/ml-engine/: CMakeLists.txt  build.sh  ml_handler.cpp
data-handling/ml-engine/metrics-consumer/: CMakeLists.txt  ml_handler.cpp
data-handling/ml-engine/ml-model/: Dockerfile  READEME.md  README.md  docker-compose.yaml  incremental_predictor.py  lstm_autoscaler.h5  requirements.txt
data-handling/ml-engine/predictions_producer/: CMakeLists.txt  READEME.md  build.sh  ml_producer.cpp
data-handling/ml-engine/wavelet-model/: Dockerfile  incremental_predictor.py  requirements.txt  wavelet_autoscaler.h5
data-handling/prometheus/: CMakeLists.txt  README.md  build.sh  prometheus.yml  prometheus_handler.cpp
kafka/: README.md
kafka/Constants/: constants.cpp  constants.h
kafka/Consumer/: .gitignore  CMakeLists.txt  build.sh  consumer.cpp  consumer.h
kafka/Producer/: CMakeLists.txt  build.sh  producer.cpp  producer.h
redis-consumer/: CMakeLists.txt  Dockerfile  README.MD  build.sh  consumer.cpp  redis_consumer.cpp
redis-consumer/src/: consumer.cpp
tmp/: README.md  load-generator.sh  nginx.sh
